# gamma-ray

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  run-build.sh  run-debug.sh  run-release.sh  run-test.sh  sample-config.json  upload.sh
app/: main.cpp
cmake/: Boost.cmake  CodeCoverage.cmake  ConfigSafeGuards.cmake  Cpprestsdk.cmake  Doctest.cmake  Documentation.cmake  Misc.cmake  POCO.cmake  Websocketpp.cmake
doc/: 01_fetch_bitmex_data.py  02_extract_and_concat.py  AS model calibration.ipynb
include/: bitmex_gateway.h  bitmexhttp.h  bitmexws.h  config.h.in  delta_parser.h  example.h  exampleConfig.h.in  fair_value.h  interfaces.h  market_filtration.h  models.h  quote_dispatcher.h  quoter.h  quoting_engine.h  quoting_parameters.h  quoting_strategies.h  skew.h  util.h  ws.h
src/: bitmex_gateway.cpp  bitmexhttp.cpp  bitmexws.cpp  delta_parser.cpp  example.cpp  fair_value.cpp  market_filtration.cpp  models.cpp  quote_dispatcher.cpp  quoter.cpp  quoting_engine.cpp  quoting_parameters.cpp  quoting_strategies.cpp  skew.cpp  ws.cpp
tests/: CMakeLists.txt  bitmex_gateway.cpp  bitmexhttp.cpp  bitmexws.cpp  delta_parser.cpp  dummy.cpp  fair_value.cpp  main.cpp  market_filtration.cpp  quoting_engine.cpp  quoting_strategies.cpp  rounding.cpp  skew.cpp
